--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>ASCII Dragon</title>
+<title>Hic Sunt Dracones</title>
 </head>
 <body>
 
@@ -19,6 +19,7 @@
  | \____(      )___) )___
   \______(_______;;; __;;;
 
+     Hic Sunt Dracones
 </pre>
 
 </body>
